--- a/web/src/app/lieferanten-login/lieferanten-login.component.html
+++ b/web/src/app/lieferanten-login/lieferanten-login.component.html
@@ -1,2 +1,6 @@
-<p>lieferanten-login works!</p>
+<mat-toolbar color="primary">
+    <h2 class="mat-headline">Lieferanten-Login</h2>
+</mat-toolbar>
+
+
 <a mat-button routerLink="/app-lieferanten-menu" routerLinkActive="active">Login</a>
