home Seite + routing + Lieferung eintragen implementiert

--- a/web/src/app/lieferanten-menu/lieferanten-menu.component.html
+++ b/web/src/app/lieferanten-menu/lieferanten-menu.component.html
@@ -1,2 +1,7 @@
-<p>lieferanten-menu works!</p>
-<a mat-button routerLink="/app-lieferplan" routerLinkActive="active">Lieferplan</a>
+<mat-toolbar color="primary">
+    <h2 class="mat-headline">Lieferanten-Login</h2>
+</mat-toolbar>
+
+<div class="lieferanten-menu-container">
+    <a mat-raised-button color="primary" routerLink="/app-lieferplan" routerLinkActive="active">LIEFERPLAN</a>
+</div>
