--- a/web/src/app/lieferplan/lieferplan.component.html
+++ b/web/src/app/lieferplan/lieferplan.component.html
@@ -28,9 +28,8 @@
             </mat-card-content>
         </div>
 
-        <button mat-raised-button color="primary">
+        <button mat-raised-button color="primary" (click)="geliefert(lieferung.name)">
             GELIEFERT
-            <mat-icon aria-hidden="false">done</mat-icon>
         </button>
     </mat-card>
 </div>
