--- a/web/src/app/lieferanten-login/lieferanten-login.component.html
+++ b/web/src/app/lieferanten-login/lieferanten-login.component.html
@@ -2,5 +2,6 @@
     <h2 class="mat-headline">Lieferanten-Login</h2>
 </mat-toolbar>
 
-
-<a mat-button routerLink="/app-lieferanten-menu" routerLinkActive="active">Login</a>
+<div class="lieferanten-login-container">
+    <a mat-raised-button color="primary" routerLink="/app-lieferanten-menu" routerLinkActive="active">LOGIN</a>
+</div>
