--- a/web/src/app/haendler-menu/haendler-menu.component.html
+++ b/web/src/app/haendler-menu/haendler-menu.component.html
@@ -1,1 +1,7 @@
-<p>haendler-menu works!</p>
+<mat-toolbar color="primary">
+    <h2 class="mat-headline">Händler-Menü {{name}}</h2>
+</mat-toolbar>
+
+<div class="component-container">
+    <a mat-raised-button color="primary" routerLink="/app-lieferplan" routerLinkActive="active">LIEFERPLAN</a>
+</div>
