--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<div class="cow">
+<mat-toolbar color="primary">
+    <h2 class="mat-headline">"Willst du von hinten in die Mutter, verwende Deutsche Markenbutter"</h2>
+</mat-toolbar>
 
+<div class="cow">
 </div>
