--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -6,3 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 h2 {
     font-weight: 300 !important;
 }
+
+.component-container {
+    margin: 1rem;
+}
