Routing zu Verkauf+Inventar implementiert

--- a/web/src/app/haendler-login/haendler-login.component.html
+++ b/web/src/app/haendler-login/haendler-login.component.html
@@ -13,6 +13,6 @@
     </mat-form-field>
     <div class="login-link-wrapper">
         <a mat-raised-button color="primary" [routerLink]="['/app-haendler-menu', name]"
-            routerLinkActive="active">LOGIN</a>
+            routerLinkActive="active">Login</a>
     </div>
 </div>
