--- a/web/src/app/lieferanten-menu/lieferanten-menu.component.html
+++ b/web/src/app/lieferanten-menu/lieferanten-menu.component.html
@@ -3,5 +3,5 @@
 </mat-toolbar>
 
 <div class="lieferanten-menu-container">
-    <a mat-raised-button color="primary" routerLink="/app-lieferplan" routerLinkActive="active">LIEFERPLAN</a>
+    <a mat-raised-button color="primary" routerLink="/app-lieferplan" routerLinkActive="active">Lieferplan</a>
 </div>
