--- a/web/src/app/lieferplan/lieferplan.component.html
+++ b/web/src/app/lieferplan/lieferplan.component.html
@@ -29,7 +29,7 @@
         </div>
 
         <button mat-raised-button color="primary" (click)="geliefert(lieferung.name)">
-            GELIEFERT
+            Geliefert
         </button>
     </mat-card>
 </div>
