--- a/web/src/app/lieferanten-login/lieferanten-login.component.html
+++ b/web/src/app/lieferanten-login/lieferanten-login.component.html
@@ -3,5 +3,5 @@
 </mat-toolbar>
 
 <div class="lieferanten-login-container">
-    <a mat-raised-button color="primary" routerLink="/app-lieferanten-menu" routerLinkActive="active">LOGIN</a>
+    <a mat-raised-button color="primary" routerLink="/app-lieferanten-menu" routerLinkActive="active">Login</a>
 </div>
