--- a/web/src/app/haendler-inventar/haendler-inventar.component.html
+++ b/web/src/app/haendler-inventar/haendler-inventar.component.html
@@ -6,17 +6,17 @@
     <table mat-table [dataSource]="inventar" class="mat-elevation-z8">
         <ng-container matColumnDef="Produkt">
             <th mat-header-cell *matHeaderCellDef> Produkt </th>
-            <td mat-cell *matCellDef="let element"> {{element.produkt}} </td>
+            <td class="td-produkt" mat-cell *matCellDef="let element"> {{element.produkt}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Vorrat">
             <th mat-header-cell *matHeaderCellDef> Vorrat </th>
-            <td mat-cell *matCellDef="let element"> {{element.vorrat}} </td>
+            <td class="td-vorrat" mat-cell *matCellDef="let element"> {{element.vorrat}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Bedarf">
             <th mat-header-cell *matHeaderCellDef> Bedarf </th>
-            <td mat-cell *matCellDef="let element">
+            <td class="td-bedarf" mat-cell *matCellDef="let element">
                 <button *ngIf="element.bedarf > 0" mat-icon-button color="warn" (click)="wenigerBedarf(element)">
                     <mat-icon>remove_circle</mat-icon>
                 </button>
