--- a/web/src/app/lieferplan/lieferplan.component.html
+++ b/web/src/app/lieferplan/lieferplan.component.html
@@ -27,9 +27,10 @@
                 </table>
             </mat-card-content>
         </div>
-
-        <button mat-raised-button color="primary" (click)="geliefert(lieferung.name)">
-            Geliefert
-        </button>
+        <mat-card-actions>
+            <button mat-raised-button color="primary" (click)="geliefert(lieferung.name)">
+                Geliefert
+            </button>
+        </mat-card-actions>
     </mat-card>
 </div>
