--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -3,7 +3,7 @@
   <span style="flex: 1 1 auto;"> </span>
   <a mat-button routerLink="/app-home" routerLinkActive="active">Home</a>
   <a mat-button routerLink="/app-haendler-login" routerLinkActive="active">Händler</a>
-  <a mat-button routerLink="/app-lieferanten-login" routerLinkActive="active">Lieferanten</a>
+  <a mat-button routerLink="/app-lieferanten-menu" routerLinkActive="active">Lieferanten</a>
 </mat-toolbar>
 
 
