--- a/web/src/app/haendler-inventar/haendler-inventar.component.css
+++ b/web/src/app/haendler-inventar/haendler-inventar.component.css
@@ -17,14 +17,18 @@ mat-card {
     margin-left: 1rem;
 }
 
+.td-artnr {
+    width: 10%;
+}
+
 .td-produkt {
     width: 50%;
 }
 
 .td-bedarf {
-    width: 25%;
+    width: 20%;
 }
 
 .td-vorrat {
-    width: 25%;
+    width: 20%;
 }
