--- a/web/src/app/home/home.component.css
+++ b/web/src/app/home/home.component.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background-image: url("../../../mat/andy-kelly-unsplash.jpg");
+    background-image: url("../../assets/andy-kelly-unsplash.jpg");
     background-size: cover;
     background-repeat: none;
     background-position-x: right;
