--- a/web/src/app/lieferplan/lieferplan.component.html
+++ b/web/src/app/lieferplan/lieferplan.component.html
@@ -28,8 +28,8 @@
             </mat-card-content>
         </div>
         <mat-card-actions>
-            <button mat-raised-button color="primary" (click)="geliefert(lieferung.name)">
-                Geliefert
+            <button mat-button color="primary" (click)="geliefert(lieferung.name)">
+                GELIEFERT
             </button>
         </mat-card-actions>
     </mat-card>
