--- a/web/src/app/haendler-login/haendler-login.component.html
+++ b/web/src/app/haendler-login/haendler-login.component.html
@@ -3,16 +3,30 @@
 </mat-toolbar>
 
 <div class="component-container haendler-login-container">
+    <div></div>
 
-    <mat-form-field>
-        <mat-label>Verkaufsstelle</mat-label>
-        <mat-select [(value)]="name">
-            <mat-option *ngFor="let verkaufsstelle of verkaufsstellen" [value]="verkaufsstelle">{{verkaufsstelle}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <div class="login-link-wrapper">
-        <a mat-raised-button color="primary" [routerLink]="['/app-haendler-menu', name]"
-            routerLinkActive="active">Login</a>
-    </div>
+    <mat-card class="menu-item" class="mat-elevation-z8 lieferplan-item">
+        <mat-card-header>
+            <mat-card-title>
+                Login
+            </mat-card-title>
+            <mat-card-subtitle>
+                Verkaufsstelle auswählen
+            </mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="../../assets/claudio-schwarz-purzlbaum-uR5w1Y9-8yE-unsplash.jpg" alt="pimmel">
+        <mat-card-actions>
+            <mat-form-field>
+                <mat-label>Verkaufsstelle</mat-label>
+                <mat-select [(value)]="name">
+                    <mat-option *ngFor="let verkaufsstelle of verkaufsstellen" [value]="verkaufsstelle">
+                        {{verkaufsstelle}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <a mat-button color="primary" [routerLink]="['/app-haendler-menu', name]"
+                routerLinkActive="active">LOGIN</a>
+        </mat-card-actions>
+    </mat-card>
+
 </div>
