--- a/web/src/app/haendler-inventar/haendler-inventar.component.html
+++ b/web/src/app/haendler-inventar/haendler-inventar.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 
 <div class="component-container">
-    <table mat-table [dataSource]="inventar" class="mat-elevation-z8">
+    <table mat-table *ngIf="inventar.length > 0" [dataSource]="inventar" class="mat-elevation-z8">
         <ng-container matColumnDef="Artikelnummer">
             <th mat-header-cell *matHeaderCellDef> Art.Nr. </th>
             <td class="td-artnr" mat-cell *matCellDef="let element"> {{element.artnr}} </td>
@@ -39,6 +39,13 @@
         <tr mat-row *matRowDef="let rowData; columns: columns"></tr>
     </table>
 
+    <mat-card *ngIf="inventar.length == 0" class="mat-elevation-z8 no-products-warning">
+        <mat-card-header>
+            <mat-card-title>Keine Produkte im Inventar</mat-card-title>
+            <mat-card-subtitle>Fordern Sie über das Formular unten neue Produkte an</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
     <mat-card *ngIf="bestellbar.length > 0" class="mat-elevation-z8 lieferplan-item">
         <mat-form-field>
             <mat-label>Neues Produkt anfordern</mat-label>
@@ -52,7 +59,7 @@
         <button *ngIf="neuesProdukt == null" mat-button class="anforderButton" disabled>ANFORDERN</button>
     </mat-card>
 
-    <mat-card class="mat-elevation-z8 lieferplan-item">
+    <mat-card class="mat-elevation-z0">
         <mat-card-actions>
             <a mat-button color="primary" [routerLink]="['/app-haendler-menu', name]" routerLinkActive="active">ZURÜCK
                 ZUM HÄNDLERMENÜ</a>
