--- a/web/src/app/lieferanten-menu/lieferanten-menu.component.html
+++ b/web/src/app/lieferanten-menu/lieferanten-menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <h2 class="mat-headline">Lieferanten-Login</h2>
+    <h2 class="mat-headline">Lieferanten-Menü</h2>
 </mat-toolbar>
 
 <div class="lieferanten-menu-container">
