--- a/web/src/app/lieferplan/lieferplan.component.html
+++ b/web/src/app/lieferplan/lieferplan.component.html
@@ -33,4 +33,11 @@
             </button>
         </mat-card-actions>
     </mat-card>
+
+    <mat-card *ngIf="lieferungen.length == 0" class="mat-elevation-z8 no-products-warning">
+        <mat-card-header>
+            <mat-card-title>Keine ausstehenden Lieferungen</mat-card-title>
+            <mat-card-subtitle>Machen Sie Feierabend</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
 </div>
