--- a/web/src/app/neues-produkt/neues-produkt.component.html
+++ b/web/src/app/neues-produkt/neues-produkt.component.html
@@ -15,12 +15,14 @@
 
             <mat-form-field>
                 <mat-label>Preis (&euro;)</mat-label>
-                <input matInput placeholder="Preis (&euro;)" [(ngModel)]="preis">
+                <input id="preis" name="preis" matInput placeholder="Preis (&euro;)" [(ngModel)]="preis"
+                    pattern="[0-9]+(.[0-9]+)?">
             </mat-form-field>
 
         </mat-card-content>
 
         <mat-card-actions>
+            <button mat-button color="warn" (click)="abbrechen()">ABBRECHEN</button>
             <button *ngIf="(name != null) && (preis != null)" mat-button color="primary"
                 (click)="produktAnlegen()">ANLEGEN</button>
             <button *ngIf="(name == null) || (preis == null)" mat-button disabled>ANLEGEN</button>
